--- a/Projet/templates/base.html
+++ b/Projet/templates/base.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p>&copy; ©2025 WPS48H. CC BY-NC-ND 4.0.</p>
+        <p>&copy; 2025 WPS48H. CC BY-NC-ND 4.0.</p>
     </div>
 </footer>
 <script src="/js/script.js"></script>
