--- a/Projet/templates/home.html
+++ b/Projet/templates/home.html
@@ -1,4 +1,7 @@
 {{ define "content" }}
+
+
+    <div class="typewriter">Analyse and Securize your site</div>
     <div class="container">
         <h1>Website Analyzer</h1>
         <div class="input-group">
