--- a/Projet/templates/base.html
+++ b/Projet/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <nav class="nav-container">
+    <nav class="nav-container unselectable">
         <a href="#" class="logo">Analyzer</a>
         <div class="nav-links">
             <a href="#">Home</a>
@@ -26,11 +26,11 @@
 <footer>
     <div class="footer-content">
         <div class="footer-section">
-            <h3>About Us</h3>
+            <h3 class="unselectable">About Us</h3>
             <p>Providing website analysis solutions with cutting-edge technology.</p>
         </div>
         <div class="footer-section">
-            <h3>Legal</h3>
+            <h3 class="unselectable">Legal</h3>
             <ul>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Terms of Service</a></li>
@@ -38,7 +38,7 @@
             </ul>
         </div>
         <div class="footer-section">
-            <h3>Connect</h3>
+            <h3 class="unselectable">Connect</h3>
             <ul>
                 <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/CookieG77/WPS48H">GitHub</a></li>
             </ul>
