--- a/Projet/templates/base.html
+++ b/Projet/templates/base.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Analyzer : {{ .Title }}</title>
-    <link rel="stylesheet" href="/css/style.css" >
+    <link rel="stylesheet" href="/css/style.css">
+    <!--<link rel="stylesheet" href="/css/themes/{{ .CurrentTheme }}>-->
 </head>
 <body>
 <header>
