--- a/Projet/templates/home.html
+++ b/Projet/templates/home.html
@@ -5,12 +5,16 @@
     <div class="container">
         <h1>Website Analyzer</h1>
         <div class="input-group">
-            <input type="url" id="websiteUrl"
-                   placeholder="Enter website URL (e.g., https://example.com)"
-                   autocomplete="off"
-                   required>
+            <form method="post">
+                <input type="url" id="websiteUrl"
+                       placeholder="Enter website URL (e.g., https://example.com)"
+                       autocomplete="off"
+                       required
+                       id="input"
+                       name="input">
+                <button onclick="handleSubmit()" type="submit">Analyze Website</button>
+            </form>
         </div>
-        <button onclick="handleSubmit()">Analyze Website</button>
         <div class="status-message" id="statusMessage"></div>
     </div>
 {{ end }}
