--- a/Projet/templates/report.html
+++ b/Projet/templates/report.html
@@ -1,3 +1,20 @@
 {{ define "content" }}
 
+<div class="unselectable home-message">Analysis done</div>
+<div class="container">
+    <section id="PDF-section">
+        <div class="div-tester">
+            <!-- structure PDF -->
+        </div>
+    </section>
+    <section class="">
+        <form action="" method="POST" id="email-form" class="input-group">
+            <input type="email" id="email-input" class="main-inputs"
+                   placeholder="email@example.com">
+            <button type="submit">Send to Email</button>
+        </form>
+        <button onclick="">Download in PDF</button>
+    </section>
+</div>
+
 {{ end }}
