--- a/Projet/templates/home.html
+++ b/Projet/templates/home.html
@@ -1,15 +1,20 @@
 {{ define "content" }}
-
-
     <div class="typewriter unselectable home-message">{{ .Lang.home.homeMessage }}</div>
     <div class="container">
         <h1 class="unselectable">{{ .Lang.home.inputMessage }}</h1>
         <div class="input-group">
-            <input type="url" id="websiteUrl" class="main-inputs"
-                   placeholder= {{ .Lang.home.inputPlaceholder }}
+                <input type="url" class="main-inputs"
+                   placeholder={{ .Lang.home.inputPlaceholder }}
                    autocomplete="off"
-                   required>
+                   required
+                   id="websiteUrl" name="websiteUrl">
+
+            <form id="form" method="post" action="/report">
+                <input type="hidden" name="realWebsiteUrl" id="realWebsiteUrl">
+            </form>
         </div>
+
+
         <button onclick="handleSubmit()" class="unselectable">{{ .Lang.home.inputButton }}</button>
         <div class="status-message" id="statusMessage"></div>
     </div>
