--- a/Projet/templates/report.html
+++ b/Projet/templates/report.html
@@ -8,13 +8,11 @@
         </div>
     </section>
     <section class="">
-        <form action="" method="POST" id="email-form" class="input-group">
-            <input type="email" id="email-input" class="main-inputs"
-                   placeholder= {{ .Lang.report.inputEmailPlaceholder }}
-            >
-            <button type="submit">{{ .Lang.report.buttonEmailMessage }}</button>
-        </form>
-        <button onclick="">{{ .Lang.report.buttonDownloadMessage }}</button>
+        <input type="email" id="email-input" class="main-inputs"
+               placeholder= {{ .Lang.report.inputEmailPlaceholder }}
+        >
+        <button id="sendByMail">{{ .Lang.report.buttonEmailMessage }}</button>
+        <button id="downloadButton">{{ .Lang.report.buttonDownloadMessage }}</button>
     </section>
 </div>
 
