--- a/Projet/templates/home.html
+++ b/Projet/templates/home.html
@@ -12,7 +12,7 @@
                        required
                        id="input"
                        name="input">
-                <button onclick="handleSubmit(), downloadReport()" type="submit">Analyze Website</button>
+                <button onclick="window.location.href='/download'" type="submit">Analyze Website</button>
             </form>
         </div>
         <div class="status-message" id="statusMessage"></div>
