--- a/Projet/templates/report.html
+++ b/Projet/templates/report.html
@@ -12,7 +12,7 @@
                placeholder= {{ .Lang.report.inputEmailPlaceholder }}
         >
         <button id="sendByMail">{{ .Lang.report.buttonEmailMessage }}</button>
-        <button id="downloadButton">{{ .Lang.report.buttonDownloadMessage }}</button>
+        <button id="downloadButton" onclick="window.location.href='/download'">{{ .Lang.report.buttonDownloadMessage }}</button>
     </section>
 </div>
 
