--- a/Projet/templates/base.html
+++ b/Projet/templates/base.html
@@ -10,9 +10,9 @@
 <body>
 <header>
     <nav class="nav-container unselectable">
-        <a href="#" class="logo">Analyzer</a>
+        <a href="/" class="logo">Analyzer</a>
         <div class="nav-links">
-            <a href="#">{{ .Lang.base.header.homeNav }}</a>
+            <a href="/">{{ .Lang.base.header.homeNav }}</a>
             <!-- <a href="#">Features</a>
             <a href="#">Documentation</a>
             <a href="#">Contact</a> -->
