--- a/Projet/templates/report.html
+++ b/Projet/templates/report.html
@@ -8,10 +8,10 @@
         </div>
     </section>
     <section class="">
-        <input type="email" id="email-input" class="main-inputs"
+        <input type="email" id="email-input" class="main-inputs spacing"
                placeholder= {{ .Lang.report.inputEmailPlaceholder }}
         >
-        <button id="sendByMail">{{ .Lang.report.buttonEmailMessage }}</button>
+        <button id="sendByMail" class="spacing">{{ .Lang.report.buttonEmailMessage }}</button>
         <button id="downloadButton">{{ .Lang.report.buttonDownloadMessage }}</button>
     </section>
 </div>
