--- a/Projet/templates/base.html
+++ b/Projet/templates/base.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <nav class="nav-container unselectable">
-        <a href="/" class="logo">Analyzer</a>
+        <a href="/" class="logo">Projet 48h</a>
         <div class="nav-links">
             <a href="/">{{ .Lang.base.header.homeNav }}</a>
             <!-- <a href="#">Features</a>
